# Timetable-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  bot.py  cli.py  config.py  context.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  tableparser.py
.github/workflows/: auto-changelog.yml  changelog.yml  production_deployment.yml  test.yml
app/: bot.py  cli.py  config.py  context.py
app/database/: database.py
app/database/models/: __init__.py  mixins.py  models.py  user.py
app/database/services/: course.py  direction.py  exceptions.py  faculty.py  group.py  init_database.py  profile.py  role.py  settings.py  user.py
app/filters/: dispatcherFilters.py
app/forms/: feedback.py  form_utils.py  free_audiences.py  register.py
app/handlers/: __init__.py  adminPanel.py  admin_handler.py  admin_panel.py  feedbackHandler.py  feedback_handler.py  free_audiences_handler.py  mainHandler.py  main_handler.py  middlewares.py  registerHandler.py  register_handler.py  schedule_handler.py  settings_hanlder.py  user_handler.py
app/keyboards/: adminPanel.py  registerHandler.py
app/services/: __init__.py  context.py  keyboards.py  none_module.py  redis.py  scheduler.py
app/utils/: HTTPMethods.py  HTTP_methods.py  ScheduleParser.py  __init__.py  bot_methods.py  context.py  keyboards.py  schedule_parser.py
database/: database.py
database/models/: user.py
filters/: chatType.py  dispatcherFilters.py
handlers/: adminPanel.py  feedbackHandler.py  free_audiences_handler.py  mainHandler.py  middlewares.py  registerHandler.py
keyboards/: admin.py  adminPanel.py  registerHandler.py
migrations/: env.py
models/: user.py
tests/: test_HTTPMethods.py  test_ScheduleParser.py  test_admin.py  test_config.py  test_context.py  test_keyboards.py  test_mainHandler.py  test_middlewares.py  test_registerHandler.py  test_registerKeyboards.py
tests/test_bot/: __init__.py
tests/test_bot/handlers/: test_mainHandler.py  test_middlewares.py  test_registerHandler.py
tests/test_bot/keyboards/: test_admin.py  test_registerKeyboard.py
tests/test_utils/: test_HTTPMethods.py  test_ScheduleParser.py  test_bot_methods.py  test_context.py  test_keyboards.py
utils/: HTTPMethods.py  ScheduleParser.py  botMethods.py  context.py  keyboards.py
