[tool.poetry]
name = "timetable-bot"
version = "0.0.1"
description = ""
authors = ["k0te1ch <khvostov40@gmail.com>", "ShyDamn <den03062003@gmail.com>"]
license = ""
readme = "README.md"


[tool.poetry.dependencies]
python = "~=3.10"
lxml = "^4.9.3"
loguru = "^0.7.2"
aiogram = "~=3.3.0"
redis = "^5.0.1"
sqlalchemy = "^2.0.22"
click = "^8.1.7"
alembic = "^1.12.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
apscheduler = "^3.10.4"


[tool.poetry.group.testing.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
aiogram-tests = {git = "https://github.com/555Russich/aiogram_tests"}
responses = "^0.23.1"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
