[tool.poetry]
name = "Timetable-bot"
version = "0.0.2"
description = "Telegram bot for schedule output"
authors = ["k0te1ch <khvostov40@gmail.com>", "ShyDamn <den03062003@gmail.com>"]
license = ""
readme = "README.md"


[tool.poetry.dependencies]
python = "~=3.10"
lxml = "^4.9.4"
loguru = "^0.7.2"
aiogram = "~3.3.0"
redis = "^5.0.3"
sqlalchemy = "^2.0.29"
click = "^8.1.7"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
apscheduler = "^3.10.4"
openpyxl = "^3.1.2"


[tool.poetry.group.testing.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
aiogram-tests = {git = "https://github.com/k0te1ch/aiogram_tests", branch = "dev"}
responses = "^0.23.1"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
pylint = "^3.1.0"
pre-commit = "^3.7.0"
poetry-plugin-up = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
